# rcwb

pkg/rcqp/: DESCRIPTION  INSTALL  NAMESPACE  NEWS  NOTES  README  TODO.txt  cleanup  configure  configure.ac  configure.win
pkg/rcqp/R/: cqi.R  cqp_attr.R  cqp_corpus.R  cqp_flist.R  cqp_ftable.R  cqp_kwic.R  cqp_object.R  cqp_subcorpus.R  create.R  gcqp.R  generics.R  gui_cqp.R  kwic.R  main.R  post-install.R  s3.R  shell.R  zzz.R
pkg/rcqp/cwb/: CHANGES  INSTALL  Makefile  MakefileRcqp.in  MakefileRcqpCrossCompile.in  config.mk  configRcqp.mk  definitions.mk
pkg/rcqp/cwb/CQi/: cqpserver.c  server.c
pkg/rcqp/cwb/cl/: MakefileRcqp  MakefileRcqp.in  cdaccess.c  cdaccess.h  cl.h  globals.h  lex.creg.c  macros.c  registry.tab.c  registry.tab.h  registry.yy.c  regopt.c  regopt.h  special-chars.c  special-chars.h
pkg/rcqp/cwb/cqp/: Makefile  MakefileRcqp.in  ascii-print.c  concordance.c  corpmanag.c  cqp.c  cqp.h  llquery.c  options.c  options.h  parser.tab.c  parser.tab.h  parser.yy.c  parser.yy.h
pkg/rcqp/cwb/doc/: code_overview.textile  version-numbering-rules.html  version-numbering-rules.textile
pkg/rcqp/cwb/doc/html/: annotated.html  ascii-print_8c.html  ascii-print_8h.html  attlist_8c.html  attlist_8h.html  attributes_8c.html  attributes_8h.html  auth_8c.html  auth_8h.html  barlib_8c.html  barlib_8h.html  binsert_8c.html  binsert_8h.html  bitfields_8c.html  bitfields_8h.html  bitio_8c.html  bitio_8h.html  builtins_8c.html  builtins_8h.html  cdaccess_8c.html  cdaccess_8h.html  cl_8h.html  class-mapping_8c.html  class-mapping_8h.html  classes.html  compression_8c.html  compression_8h.html  concordance_8c.html  concordance_8h.html  cqi_8h.html  (+338 more)
pkg/rcqp/cwb/install-scripts/: cwb-build-win32  cwb-config-basic  cwb-install-mac-osx
pkg/rcqp/cwb/instutils/: INSTALL
pkg/rcqp/cwb/man/: cwb-scan-corpus.pod
pkg/rcqp/cwb/utils/: cwb-align-show.c  cwb-align.c  cwb-compress-rdx.c  cwb-encode.c  cwb-huffcode.c  cwb-lexdecode.c  cwb-scan-corpus.c
pkg/rcqp/exampleData/registry/: vie_fr  vie_ru
pkg/rcqp/exampleData/src/: import.sh  vie_ru.cqp
pkg/rcqp/inst/doc/: Introduction.Rnw  RcqpIntroduction.Rnw  rcqp.Rnw
pkg/rcqp/man/: corpus.Rd  cqi_attribute_size.Rd  cqi_attributes.Rd  cqi_cpos2id.Rd  cqi_dump_subcorpus.Rd  cqi_fdist.Rd  cqi_fdist1.Rd  cqi_full_name.Rd  cqi_id2cpos.Rd  cqi_list_corpora.Rd  cqi_list_subcorpora.Rd  cqi_query.Rd  cqi_regex2id.Rd  cqi_struc2cpos.Rd  cqp_flist.Rd  cqp_ftable.Rd  cqp_kwic.Rd  cqp_registry.Rd  cqp_undump.Rd  create.corpus.Rd  flist.Rd  ftable.Rd  kwic.Rd  print.Rd  rcqp.Rd  region_sizes.Rd  region_sizes.cqp_corpus.Rd  size.Rd  sort.cqp_kwic.Rd  subcorpus.Rd  subset.Rd  summary.Rd  tokens.Rd  write.cqp_corpus.Rd
pkg/rcqp/src/: Makefile.in  Makefile.win  MakefileCrossCompile.in  Makevars.in  Makevars.win.in  makeRCompatible.h  makeRCompatible.txt  rcqp.h  rcqpCommands.c  rcqpCommands.h  rcqpCreate.c  rcqpCreate.h  rcqpUtils.c  rcqpUtils.h
pkg/rcqp/src/cwb/: INSTALL  Makefile
pkg/rcqp/tests/: doRUnit.R
pkg/rcqp/tests/unitTests/: Makefile  runit.create.corpus.R
pkg/rcqp/vignettes/: Introduction.Rnw
(+236 files in other folders)
